style(revision): title & button mobile view fixes and remove wiki diff max-width

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -41,8 +41,6 @@ textarea.wiki-content {
 }
 
 .wiki-diff {
-	max-width: 700px;
-
 	.diff {
 		font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier,
 			monospace;
@@ -85,6 +83,17 @@ textarea.wiki-content {
 
 .restore-wiki-revision {
 	float: right;
+	@include media-breakpoint-down(sm) {
+		float: none;
+		margin: 10px 0;
+	}
+}
+
+.revision-message {
+	display: inline;
+	@include media-breakpoint-down(sm) {
+		display: block;
+	}
 }
 
 // sidebar
